--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 }
 
 body {
+  max-width: 100vw;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -84,7 +85,6 @@ body {
 }
 
 .button-play {
-  outline: none;
   position: relative;
   align-items: center;
   margin-top: 54px;
