--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ body {
 .nav {
   margin-left: 56px;
 }
+
 .nav-link {
   margin-left: 15px;
   text-decoration: none;
@@ -101,6 +102,7 @@ body {
   color: #ffffff;
   cursor: pointer;
 }
+
 .button-play:before {
   content: '';
   position: absolute;
@@ -111,6 +113,7 @@ body {
   top: 0;
   right: 0;
 }
+
 .button-play:after {
   content: '';
   position: absolute;
@@ -123,9 +126,10 @@ body {
     no-repeat 22px 22px;
 }
 
-.episodes {
+.footer {
   margin-top: 59px;
 }
+
 .episodes-title {
   font-weight: bold;
   font-size: 18px;
@@ -135,27 +139,27 @@ body {
 .episodes-slider {
   margin-top: 24px;
   display: flex;
-  /* justify-content: space-between; */
+  flex-wrap: wrap;
 }
 
 .episodes-slider-item {
+  width: 190px;
+  min-height: 140px;
+  border-radius: 10px;
+  background-color: rgba(80, 80, 80, 0.75);
+  box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.25);
+  padding: 30px;
   position: relative;
-  overflow: hidden;
-  padding-left: 29px;
-  padding-top: 30px;
   font-weight: 900;
   font-size: 18px;
   line-height: 150%;
-  width: 250px;
-  height: 200px;
-  background-color: rgba(80, 80, 80, 0.86);
-  box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
+  overflow: hidden;
   cursor: pointer;
-  transition: all 300ms;
+  transition: all 200ms;
 }
+
 .episodes-slider-item:hover {
-  background-color: rgba(64, 101, 255, 0.86);
+  background-color: rgba(64, 101, 255, 0.75);
 }
 
 .episodes-slider-year {
@@ -176,20 +180,24 @@ body {
   font-weight: normal;
   font-size: 13px;
 }
-.episodes-slider-rating-text{
+
+.episodes-slider-rating-text {
   margin-right: 12px;
 }
-.episodes-slider-rating-stars{
+
+.episodes-slider-rating-stars {
   width: 68;
   display: flex;
   justify-content: space-between;
 }
-.star-solid{
+
+.star-solid {
   width: 12px;
   height: 12px;
   background: transparent url('../img/star-solid.png') no-repeat center;
 }
-.star-blank{
+
+.star-blank {
   width: 12px;
   height: 12px;
   background: transparent url('../img/star-blank.png') no-repeat center;
@@ -211,6 +219,7 @@ body {
   width: 78px;
   margin-left: 15px;
 }
+
 .episodes-slider-nav-left {
   border: 0px;
   width: 34px;
@@ -218,6 +227,7 @@ body {
   background: url('../img/slider-left-arrow.svg') no-repeat center;
   cursor: pointer;
 }
+
 .episodes-slider-nav-right {
   border: 0px;
   width: 34px;
